# biothings

./: .dockerignore  .env.example  .gitignore  DEPLOYMENT_GUIDE.md  Dockerfile  FINAL_SUMMARY.md  GEMINI_TEST_RESULTS.md  Makefile  NEXT_STEPS_2025.md  PROGRESS_UPDATE.md  PROJECT_SUMMARY.md  README.md  README_CLAUDE_CODE_LANGCHAIN.md  README_CLEAN.md  README_GEMINI_INTEGRATION.md  README_REAL_LLM.md  REFACTORING_COMPLETE.md  SYSTEM_ARCHITECTURE.md  UI_FUNCTIONALITY_SUMMARY.md  benchmark_uv_vs_pip.py  demo.py  demo_claude_code_langchain.py  demo_gemini_langchain.py  demo_gemini_simple.py  demo_real_llm.py  demo_simple.py  demo_uv_features.py  deploy-cloud.sh  deploy-opensource.sh  deploy.sh  docker-compose.monitoring.yml  docker-compose.opensource.yml  docker-compose.yml  fly.toml  nginx.conf  quick_api_test.py  quick_test.py  railway.json  render.yaml  setup_real.sh  (+9 more)
backend/: .env.example  Dockerfile  config.py  main.py  main_live.py  main_simple.py  main_with_agents.py  pyproject.toml  pytest.ini  requirements-minimal.txt  requirements.txt  test_communication.py
backend/app/: main.py
backend/monitoring/: README.md  alertmanager.yml  alertmanager_rules.py  cost_tracking.py  enhanced_metrics.py  grafana_dashboards.py  health_checks.py  metrics.py  performance_monitoring.py  prometheus.yml  prometheus_rules.yml  prometheus_server.py  structured_logging.py
backend/security/: README.md  __init__.py  audit_logging.py  auth_endpoints.py  config.py  database_models.py  integration_example.py  main_integration.py  monitoring.py  production_security.py  validation_middleware.py
backend/services/: agent_orchestrator.py  (+3 more)
(+219 files in other folders)
