[project]
name = "biothings-backend"
version = "1.0.0"
description = "AI-powered biotech platform backend"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.9",
    "websockets>=13.1",
    "google-generativeai>=0.8.3",
    "langchain>=0.3.7",
    "langchain-google-genai>=2.0.7",
    "langgraph>=0.2.42",
    "sqlalchemy>=2.0.35",
    "asyncpg>=0.29.0",
    "alembic>=1.13.2",
    "redis>=5.1.0",
    "celery>=5.4.0",
    "pandas>=2.2.2",
    "numpy>=1.26.4",
    "biopython>=1.84",
    "scikit-learn>=1.5.2",
    "pydantic>=2.9.2",
    "pydantic-settings>=2.5.2",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "structlog>=24.4.0",
    "prometheus-client>=0.21.0",
    "python-dotenv>=1.0.1",
    "aiohttp>=3.10.5",
    "beautifulsoup4>=4.12.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.2",
    "black>=24.8.0",
    "ruff>=0.6.9",
    "ipykernel>=6.29.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
# Use uv for dependency management
dev-dependencies = [
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.2",
    "black>=24.8.0",
    "ruff>=0.6.9",
    "ipykernel>=6.29.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]